...
              android:orientation="vertical"
              android:weightSum="10"
              android:gravity="center_horizontal"
              tools:context=".MainActivity2">

    <ImageView
            android:id="@+id/imageView"
            android:layout_weight="9"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scaleType="fitCenter"
            android:src="@drawable/image1"/>

    <EditText
            android:id="@+id/editTextName"
            android:layout_weight="0.25"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
...
